# seabird-plugin-bundle

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  .woodpecker.yml  Cargo.toml  Dockerfile  LICENSE  LICENSE-BARISTA  README.md  build.rs  docker-compose.yml  entrypoint.sh  flake.nix  sqlx-data.json
.github/workflows/: docker-pr.yml  docker-publish.yml
.sqlx/: query-06d5062612c9cd9d4fe8126309e46d8f86c372f456221e320fc2937b0fc41faa.json  query-1a9de16cbf535d3ae46afe3661aa371fe5232819979c018d51d00aeb7ea6f240.json  query-221d70d937071d759a780e34c95dfccd170403511163dbea806d586ee126b988.json  query-32b09c7fff87018e6aaa2a44310738cc62cac7454c795313179c425b0ce412c0.json  query-4edd17f3d0c44b1b2c6a253dd79c71ba0cb428b6e82ede32d3ac0779fa65f0aa.json  query-4f517de5fd07c14dd531c2f0fcec416947f8185b0e96519b5a1f80e55cb49ecf.json  query-759e79ffa0012e64f6bf96cbbbe5dfe27bd7c0b628bb0008f7db33ad3ef501c3.json  query-84c4199d51b1af556c73cbfefecdb3284354f8fcc30f4c578e4e5d28b8241949.json  query-9d3cfd4080385242f57cfa67b4ae94fe4eb066c622f8cb13675b14922925c328.json  query-a6e6fa376094fe896748c3b19a90cd1f5245d0837a0436f4e4e5557bb35ad0da.json  query-c31080bc829a3a13b6297ce67c8987083dac31dd5df18a27c308afa5af414587.json  query-c3cc39d499ef96fde068affdf56a812474e88753ccece39f4d19b3bf8cd0c89c.json  query-d8869f1838ef2ea7490e88049378456f92821df1bad842c8d97ec4360fd0b143.json  query-fe22b047b068e08543e039bf77f7d0158a0bf55f88412504217efdab4a07eff2.json
hooks/: post_checkout
migrations/: 1_karma.sql  2_bucket.sql  3_noaa.sql  4_forecast.sql  5_karma_alias.sql  6_quotes.sql  6_remind.sql
migrations/2020-02-04-174155_create_karma/: down.sql  up.sql
migrations/2020-02-07-174738_create_bucket/: down.sql  up.sql
src/: client.rs  codec.rs  context.rs  core.rs  event.rs  io.rs  irc.rs  main.rs  message.rs  migrations.rs  plugin.rs  prelude.rs  schema.rs  utils.rs
src/irc/: mod.rs  test_data.yml  tests.rs
src/migrations/: 1_karma.sql  2_bucket.sql  V1__karma.rs  V2__bucket.rs  V3__noaa.rs  V3__noaa.sql  V4__forecast.rs  V4__forecast.sql  mod.rs
src/plugins/: bucket.rs  chance.rs  forecast.rs  help.rs  introspection.rs  joke.rs  karma.rs  mention.rs  minecraft.rs  mod.rs  net_tools.rs  noaa.rs  quotes.rs  remind.rs  riddle.rs  scryfall.rs  uptime.rs  url.rs
src/plugins/barista/: coffee.rs  mod.rs  pop.rs  tea.rs
src/utils/: darksky.rs  hex_slice.rs  maps.rs  mod.rs  openweathermap.rs  stream_reader.rs
