[package]
name = "seabird-plugin-bundle"
version = "0.1.0"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.7"
dotenvy = "0.15"
futures = "0.3"
log = "0.4"
maplit = "1.0"
pretty_env_logger = "0.5"
tokio = { version = "1.40", features = ["macros", "rt", "sync", "time"] }
tokio-stream = "0.1"

# Plugin dependencies
#http = "0.2"
itertools = "0.13"
lazy_static = "1.4"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json", "stream"] }
scryfall = "0.22"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "migrate", "postgres"] }
time = { version = "0.3", features = ["formatting"] }
tokio-postgres = "0.7"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
url = "2.5"
git-version = "0.3"
unicode-segmentation = "1.12"

# Client library
seabird = "0.3.0-alpha.1"
